Table users {
  id uuid [pk]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table products {
  id uuid [pk]
  name varchar(255) [not null]
  price numeric(12,2) [not null]
  stock_quantity integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    created_at
  }
}

Table orders {
  id uuid [pk]
  user_id uuid [not null]
  status varchar(20) [not null, default: 'pending']
  total_amount numeric(12,2) [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    user_id
    (status, expires_at)
  }
}

Table order_items {
  id uuid [pk]
  order_id uuid [not null]
  product_id uuid [not null]
  quantity integer [not null]
  price numeric(12,2) [not null]

  Indexes {
    order_id
    product_id
  }
}

Table idempotency_keys {
  id uuid [pk]
  user_id uuid [not null]
  key varchar(255) [not null]
  order_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, key) [unique]
    order_id
  }
}

Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: idempotency_keys.user_id > users.id
Ref: idempotency_keys.order_id > orders.id